src/snapshots/openapi_to_rust__test_helpers__allof_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct TextMessage {
    pub content: String,
    pub id: String,
    pub timestamp: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BaseMessage {
    pub id: String,
    pub timestamp: String,
}
