src/snapshots/openapi_to_rust__test_helpers__array_member_of_type_array_union.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct Widget {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub tags_or_tag: Option<WidgetTagsOrTag>,
}
///Array variant in union
pub type WidgetTagsOrTagArray = Vec<String>;
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum WidgetTagsOrTag {
    WidgetTagsOrTagArray(WidgetTagsOrTagArray),
    String(String),
}
